# .dotfiles

./: .XCompose  .bashrc  .emacs  .gitconfig  .gitignore  .ideavimrc  .initrc  .spacemacs  .vimrc  .zshrc  dependencies.md  fstab  grub  symbolic-links.md  yi.hs
.config/nitrogen/: bg-saved.cfg  nitrogen.cfg
.xmonad/: .conky_dzen  .xmobarrc  battery.sh  build  cabal.project  i3status.conf  install-xmonad  lang_switch.sh  set_volume.sh  start-xmonad  startup-hook  volume.sh  xmobarrc  xmonad-config.cabal  xmonad.hs  xmonad.state
.xmonad/images/: bluetooth.xbm
.xmonad/scripts/: arbtt.sh  audio_bar.sh  audio_controls.sh  bluetooth.sh  callFun.sh  check_channels.sh  cpu_controls.sh  get_gpu.sh  get_ram.sh  get_volume.sh  get_vpn.sh  hdmi_toggle.sh  inhibit.sh  monitorCPU.sh  monitorWifi.sh  print.sh  prochot_fix.sh  quickstart.sh  replug.sh  setCpuTurbo.sh  set_volume.sh  toggle_mousepad.sh  video_bar.sh  video_controls.sh
atom/: keymap.cson
bash/: 0-constants.symlink  1-functions.symlink  2-aliases.symlink  3-exports.symlink  3-path.symlink  4-exports.symlink  adhoc_fixes.symlink  agda.symlink  aliases.symlink  arsnova.symlink  audio.symlink  boot_setup.symlink  cds_utils.symlink  exports.symlink  ghc.symlink  keyboard.symlink  lang_time.symlink  language.symlink  make.symlink  mime_dispatch.sh  networking.symlink  nix.symlink  path.symlink  prelude.symlink  prompt.symlink  settings.symlink  time.symlink  video.symlink
bash/inactive/: 4-exports-old.symlink  arbtt.symlink  arsnova.symlink  dyck.symlink  print.symlink
cronjobs/: battery.sh  crontab  vpn_check.sh
emacs-snippets/agda2-mode/: class  code  data  (+18 more)
sublime/: CSS.sublime-settings  Preferences.sublime-settings  Python.sublime-settings
thunderbird-filters/: cern  melkon-or
zsh/: agda-locate-latex-dir-of.sh  agda-locate-latex-dir.sh  agda.symlink  functions.symlink  make.symlink
(+38 files in other folders)
