name:          xmonad-config
version:       0.17.0
synopsis:      My XMonad Configuration
homepage:      https://github.com/omelkonian/.dotfiles
author:        Orestis Melkonian <melkon.or@gmail.com>
maintainer:    Orestis Melkonian <melkon.or@gmail.com>
category:      Configuration
build-type:    Simple
cabal-version: >=2.0

------------------------------------------------------------------------------
executable xmonad-config
  main-is:       xmonad.hs

  ghc-options:   -Wall
                 -Werror
                 -fno-warn-missing-signatures
                 -fno-warn-type-defaults

  build-depends: base           >=4.11 && <5,
                 xmonad         == 0.17.0,
                 xmonad-contrib == 0.17.0,
                 X11            == 1.10,
                 data-default   == 0.7.1.1,
                 containers     >=0.5 && <0.7

